2015-02-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (exec_ssh_command): New function. Set timeout and
	rework response reading loop to fix infinite loop case.
	(nasl_ssh_request_exec): Refactor code to use exec_ssh_command()
	accordingly.

2015-02-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp/omp.h (omp_create_target_opts_t): Add field esxi_credential_id.

	* omp/omp.c (omp_create_target_ext): Handle new esxi_credential_id
	option to select ESXi credentials.

2015-02-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* omp/omp.h (omp_create_target_opts_t): Add fields exclude_hosts,
	alive_tests, reverse_lookup_only, reverse_lookup_unify.

	* omp/omp.c (omp_create_target_ext): Handle options exclude_hosts,
	alive_tests, reverse_lookup_only, reverse_lookup_unify. Free all
	temporary strings at the end.

2015-02-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_create_lsc_credential_ext): New function.

	* omp/omp.h: Add headers accordingly.

2015-02-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/scanners_utils.c, misc/scanners_utils.h: Remove files.

	* nasl/nasl_builtin_nmap.c, nasl/nasl_builtin_synscan.c,
	nasl/nasl_scanner_glue.c: Adjust headers includes.

	* COPYING: Remove scanners_utils.[c,h] license details.

	* misc/CMakeLists.txt: Delete removed files from build process.

	* misc/network.c (getpts, qsort_compar): New functions.

	* misc/network.h: Add getpts() prototype.

2015-02-09  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_create_target_ext): Add SSH port option.

	* omp/omp.h (omp_create_target_opts_t): Add ssh_credential_port.
	(omp_create_target_opts_defaults): Init ssh_credential_port.

2015-02-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c, misc/openvas_server.c, nasl/nasl_ssh.c: Remove
	work-arounds for old gnutls versions < 2.12 which are unsupported.

2015-02-06  Hani Benhabiles <hani.benhabiles@greenbone.net>
